# PGSCP

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md
.github/workflows/: terraform-plan.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py  observability.py  queue_sqs.py  schemas.py  settings.py  storage_s3.py
apps/api/tests/: test_schemas.py
apps/dashboard/: Dockerfile  pyproject.toml
apps/dashboard/pgscp_dashboard/: Home.py  api_client.py  db.py  settings.py
apps/dashboard/pgscp_dashboard/pages/: 1_Alerts.py  2_Investigations.py
apps/investigator/: Dockerfile  pyproject.toml
apps/investigator/eval/: judge.py  metrics.py  report.py  runner.py
apps/investigator/eval/dataset/: README.md  golden.jsonl
apps/investigator/investigator/: db.py  feedback.py  graph.py  llm.py  main.py  nodes.py  observability.py  schemas.py  settings.py  state.py
apps/investigator/investigator/prompts/: examples.md  system.md
apps/investigator/investigator/tools/: __init__.py  cloudwatch.py  db.py  ecs.py  s3.py
apps/investigator/tests/: conftest.py  test_eval_runner.py  test_graph_isolated.py  test_llm_scripted.py  test_metrics.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_rules.py
apps/worker/worker/: db.py  dedupe.py  main.py  partner_client.py  rules.py  settings.py
docs/: defense-notes.md  plan.md
docs/architecture/: overview.md
docs/blueprints/: README.md  cloud-engineer-project-blueprint.md  pgscp.md
docs/decisions/: 0000-template.md  0001-ecs-fargate-over-eks.md  0002-sqs-over-kafka.md  0003-terraform-over-cloudformation.md  0004-sqs-vs-kinesis-flink.md  README.md
docs/postmortems/: README.md  template.md
docs/runbooks/: README.md  template.md
infra/: README.md
infra/bootstrap/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/envs/dev/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/envs/dev-shared/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/modules/alb/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/ecs_cluster/: main.tf  outputs.tf  variables.tf
infra/modules/ecs_service/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  security-groups.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/sqs/: main.tf  outputs.tf  variables.tf
infra/modules/vpc_endpoints/: main.tf  variables.tf
local/: docker-compose.yml  init.sql  smoke-test-record.json
local/localstack-init/: init-aws.sh
local/mock-partner/: Dockerfile  main.py
local/sample-events/: README.md  accuracy-drift-setup.json  cost-anomaly.json  happy.json  latency-breach.json  pii-leak.json
