[project]
name = "pgscp-investigator"
version = "0.1.0"
description = "PGSCP investigator — LangGraph agent that consumes alerts and produces structured root-cause investigations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]
bedrock = [
    "langchain-aws>=0.2.0",
]
openai = [
    "openai>=1.54.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["investigator*"]

[tool.setuptools.package-data]
investigator = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
